diesel_compile_tests/tests/fail/boxed_queries_must_be_used_with_proper_connection.stderr
error[E0271]: type mismatch resolving `<diesel::SqliteConnection as diesel::Connection>::Backend == Pg`
    --> tests/fail/boxed_queries_must_be_used_with_proper_connection.rs:14:52
     |
14   |     users::table.into_boxed::<Pg>().load::<(i32,)>(&mut connection);
     |                                     ----           ^^^^^^^^^^^^^^^ expected struct `Pg`, found struct `Sqlite`
     |                                     |
     |                                     required by a bound introduced by this call
     |
     = note: required for `BoxedSelectStatement<'_, (diesel::sql_types::Integer,), FromClause<users::table>, Pg>` to implement `LoadQuery<'_, diesel::SqliteConnection, (i32,)>`
note: required by a bound in `diesel::RunQueryDsl::load`
    --> $DIESEL/src/query_dsl/mod.rs
     |
     |         Self: LoadQuery<'query, Conn, U>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `diesel::RunQueryDsl::load`
